# OS

./: README.md  child.c  os.h  os_linux.c  os_linux.h  parent.c
course project/: CMakeLists.txt  battleship_client.c  battleship_server.c  common.h  game_logic.c  game_logic.h  os.h  os_linux.c  server.c  server.h  stats.c  stats.h  sync.c  sync.h  sync_init.h
lab1/: CMakeLists.txt  os_linux.c
lab2/: CMakeLists.txt  mutex.h  mutex_linux.c  task.c  thread.h  thread_linux.c  triangle_finder.h  triangle_finder_linux.c
lab3/: CMakeLists.txt  child.c  helpers.c  helpers.h  os.h  os_linux.c  parent.c
lab4/: CMakeLists.txt  cli_parser.h  contract.h  dynamic_loader.h  lib_hard.c  lib_light.c  lib_primes.c  lib_translation.c  program1.c  program2.c
